Fixed Text-Align and Margin

--- a/css/styles.css
+++ b/css/styles.css
@@ -278,7 +278,7 @@ nav h1 a {
   font-size: 12pt;
   font-weight: 300;
   letter-spacing: 10px;
-  margin: 0 0 20px;
+  margin: 10px 0 0;
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
@@ -327,6 +327,7 @@ nav h1 a {
   font-weight: 300;
   letter-spacing: -1px;
   padding-bottom: 1pt;
+  text-align: center;
 }
 #reviews-list {
   margin: 0;
@@ -337,11 +338,12 @@ nav h1 a {
   border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
-  margin: 0 0 30px;
+  margin: 2% auto;
   overflow: hidden;
   padding: 10px 10px;
   position: relative;
-  width: 85%;
+  width: 90%;
+  text-align: center;
 }
 #reviews-list li p {
   margin: 0 0 10px;
@@ -408,12 +410,9 @@ nav h1 a {
 }
 
 @media only screen and (max-width: 655px) and (min-width: 400px) {
-  .filter-options {
-    height: 150px;
-  }
-
   #restaurant-hours {
     height: 150px;
+    text-align: center;
   }
 
   #restaurant-cuisine p {
@@ -432,6 +431,10 @@ nav h1 a {
     width: 100%;
     height: 400px;
   }
+
+  .filter-options {
+    height: 150px;
+  }
 }
 
 @media only screen and (min-width: 900px) {
@@ -446,6 +449,7 @@ nav h1 a {
     max-height: 100%;
     overflow: auto;
     align-content: flex-start;
+    text-align: center;
   }
 
   .inside #map-container {
@@ -465,6 +469,7 @@ nav h1 a {
     margin: 0;
     width: 45%;
     order: 1;
+    text-align: center;
   }
 
   .inside #reviews-container {
@@ -472,6 +477,7 @@ nav h1 a {
     margin: 0;
     width: 45%;
     order: 2;
+    text-align: center;
   }
 
   .inside ul {
